# cookiecutter-py-scaffold

./: LICENSE  README.md  cookiecutter.json  test_template.sh
.github/workflows/: template-test.yml
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: lint.yml  test.yml
{{cookiecutter.repo_name}}/: agents_templ.md  pyproject.toml  ruff.toml
