[project]
name = "{{ cookiecutter.project_name|lower|replace(' ', '-')|replace('_', '-') }}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [
    {name = "{{cookiecutter.project_name}} Authors", email = "{{cookiecutter.author_email}}"}
]
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
license = {text = "MIT"}

dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2", 
    "ruff>=0.14.10"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["*.py", "README.md", "LICENSE"]
exclude = [
    "*_test.py",
    "**/*_test.py",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
