[project]
name = "{{ cookiecutter.package_name|lower|replace('_', '-') }}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [
    {name = "{{cookiecutter.project_name}} Authors", email = "{{cookiecutter.author_email}}"}
]
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
license = {text = "MIT"}

dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["{{cookiecutter.package_name}}", "README.md", "LICENSE"]
exclude = [
    "*_test.py",
    "**/*_test.py",
]

[tool.pytest.ini_options]
testpaths = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-v", "--strict-markers", "--strict-config"]
